tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_split_wrong_delimiter_type_resolved.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected string, found number @ example-templates/errors/split-wrong-delimiter-type-resolved.yaml:5:20 (errno: ERR_5001)
  -> data type mismatch

   4 | 
   5 | test_split: !$split [!$ wrong_delimiter, "hello,world"]
     |                    ^^^^^^^^ expected string

   expected string, found number

   For more info: iidy explain ERR_5001
